--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
 h1 {
 	color: blue;
+	text-align: center;
+	font-size: 48px;
+}
+
+body {
+	background-image: url("https://external-preview.redd.it/PojPef6pdxMVSaUZvqrl1lGSHoS9-6ku3dQUtcJvOvs.jpg?auto=webp&s=71e5a2ae6cb6e03e3bf8998df2ee57d7520bf11a");
 }
