--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,6 @@ h1 {
 }
 
 body {
-	/*background-image: url("https://external-preview.redd.it/PojPef6pdxMVSaUZvqrl1lGSHoS9-6ku3dQUtcJvOvs.jpg?auto=webp&s=71e5a2ae6cb6e03e3bf8998df2ee57d7520bf11a);*/
+	background-image: url("https://external-preview.redd.it/PojPef6pdxMVSaUZvqrl1lGSHoS9-6ku3dQUtcJvOvs.jpg?auto=webp&s=71e5a2ae6cb6e03e3bf8998df2ee57d7520bf11a);
 	text-align: center;
 }
