--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@ h1 {
 	font-size: 48px;
 }
 
-body {
+body{
 	background-image: url("https://external-preview.redd.it/PojPef6pdxMVSaUZvqrl1lGSHoS9-6ku3dQUtcJvOvs.jpg?auto=webp&s=71e5a2ae6cb6e03e3bf8998df2ee57d7520bf11a);
+	margin: 0 auto;
 	text-align: center;
 }
