--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 h1 {
 	color: blue;
 	font-size: 48px;
-	margin: 0 auto;
-	text-align: center;
-	background-image: url("https://external-preview.redd.it/PojPef6pdxMVSaUZvqrl1lGSHoS9-6ku3dQUtcJvOvs.jpg?auto=webp&s=71e5a2ae6cb6e03e3bf8998df2ee57d7520bf11a);
+	
+	/*background-image: url("https://external-preview.redd.it/PojPef6pdxMVSaUZvqrl1lGSHoS9-6ku3dQUtcJvOvs.jpg?auto=webp&s=71e5a2ae6cb6e03e3bf8998df2ee57d7520bf11a);*/
 }
 
-body{
+body {
+	
+	margin: 0 auto;
+	text-align: center;
 	
 }
