--- a/styles.css
+++ b/styles.css
@@ -9,5 +9,6 @@ body {
 	
 	margin: 0 auto;
 	text-align: center;
+	background-image: url("https://external-preview.redd.it/PojPef6pdxMVSaUZvqrl1lGSHoS9-6ku3dQUtcJvOvs.jpg?auto=webp&s=71e5a2ae6cb6e03e3bf8998df2ee57d7520bf11a");
 	background-color: #cccccc;
 }
