--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 h1 {
-	color: blue;
+	
 	font-size: 48px;
 	
 	/*background-image: url("https://external-preview.redd.it/PojPef6pdxMVSaUZvqrl1lGSHoS9-6ku3dQUtcJvOvs.jpg?auto=webp&s=71e5a2ae6cb6e03e3bf8998df2ee57d7520bf11a);*/
@@ -9,6 +9,7 @@ body {
 	
 	margin: 0 auto;
 	text-align: center;
+	color: white;
 	background-image: url("https://external-preview.redd.it/PojPef6pdxMVSaUZvqrl1lGSHoS9-6ku3dQUtcJvOvs.jpg?auto=webp&s=71e5a2ae6cb6e03e3bf8998df2ee57d7520bf11a");
 	/*background-color: #cccccc;
 	background-image: radial-gradient(red, yellow, green);*/
