--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 	text-align: center;
 	color: white;
 	background-image: url("https://external-preview.redd.it/PojPef6pdxMVSaUZvqrl1lGSHoS9-6ku3dQUtcJvOvs.jpg?auto=webp&s=71e5a2ae6cb6e03e3bf8998df2ee57d7520bf11a");
+	overflow-y:scroll;
 	/*background-color: #cccccc;
 	background-image: radial-gradient(red, yellow, green);*/
 }
