--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,11 @@ body {
 	/*background-color: #cccccc;
 	background-image: radial-gradient(red, yellow, green);*/
 }
+
+.nav-bar {
+	
+	position: fixed;
+	right: 0;
+	left: 0;
+	z-index: 999;
+}
