--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,11 @@ body {
 	background-image: radial-gradient(red, yellow, green);*/
 }
 
-.nav-bar {
+/*.nav-bar {
 	padding: 25px 50px 75px 100px;
 	position: fixed;
 	right: 0;
 	left: 0;
 	z-index: 999;
-}
+	background-color:
+}*/
