--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4058,7 +4058,13 @@ input[type="button"].btn-block {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+
+}
+
+.navbar-inverse .navbar-nav li a{
   
+  color: #f7f7f7;
+  font-size: 16px;
 }
 
 .nav li {
