--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,17 @@ h1 {
 	/*background-image: url("https://external-preview.redd.it/PojPef6pdxMVSaUZvqrl1lGSHoS9-6ku3dQUtcJvOvs.jpg?auto=webp&s=71e5a2ae6cb6e03e3bf8998df2ee57d7520bf11a);*/
 }
 
+#education{
+
+	/*color:#851324;*/
+	background-color:#d99c67;
+}
+
+#education.text-primary{
+
+	color:black;
+}
+
 /*body {
 	
 	margin: 0 auto;
@@ -24,7 +35,6 @@ h1 {
 	
 	display:inline-block;
 }
-
 /*.nav-bar {
 	padding: 25px 50px 75px 100px;
 	position: fixed;
