--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,11 @@ h1 {
 	background-image:url("https://external-preview.redd.it/PojPef6pdxMVSaUZvqrl1lGSHoS9-6ku3dQUtcJvOvs.jpg?auto=webp&s=71e5a2ae6cb6e03e3bf8998df2ee57d7520bf11a");
 }
 
+.footer{
+
+	text-shadow: 2px 2px 10px black;
+}
+
 .nav li {
 	
 	display:inline-block;
