--- a/css/styles.css
+++ b/css/styles.css
@@ -43,11 +43,64 @@ h1 {
 	
 	display:inline-block;
 }
-/*.nav-bar {
-	padding: 25px 50px 75px 100px;
-	position: fixed;
-	right: 0;
-	left: 0;
-	z-index: 999;
-	background-color:
-}*/
+
+.list-inline-item{
+
+	padding:16px;
+}
+.test {
+
+	background-color:yellow;
+	padding:20px;
+	display: none;
+}
+
+.img-container {
+  position: relative;
+  width: 50%;
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.img-container:hover .image {
+  opacity: 0.3;
+}
+
+.img-container:hover .middle {
+  opacity: 1;
+}
+
+.img-text {
+  background-color: orange;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
+
+.fab{
+
+	font-size:50px;
+
+}
+
+.img-container:hover .fab{
+	color:orange;
+}
